Add shaded JAR, address build failures related to JDK version